--- a/chat/templates/chat/roleplayingroom_confirm_delete.html
+++ b/chat/templates/chat/roleplayingroom_confirm_delete.html
@@ -1,4 +1,4 @@
-{# chat/templates/chat/roleplayingroom_confirm_delete.html #}
+{# 삭제 확인 페이지 #}
 {% extends "chat/base.html" %}
 {% block content %}
     <h2>채팅방 삭제하기</h2>
