--- a/chat/templates/chat/roleplayingroom_form.html
+++ b/chat/templates/chat/roleplayingroom_form.html
@@ -6,7 +6,7 @@
         <form action="" method="post" novalidate>
             {% csrf_token %}
             <div class="card-header">
-                상황 {% if form.instance.pk %}수정하기{% else %}만들기{% endif %}
+                상황 {% if form.instance.pk %}수정하기{% else %}만들기{% endif %}  {# pk 값이 있으면 수정하기 없으면 만들기 #}
             </div>
             <div class="card-body">{% bootstrap_form form layout="horizontal" %}</div>
             <div class="card-footer text-end">
